update about.html and About author.html
In this Update i add Images of Authors

--- a/about.html
+++ b/about.html
@@ -184,27 +184,27 @@
                 <!-- Circular image links -->
                 <div class="col-md-2 mb-4">
                     <a href="about author.html">
-                        <img src="Dr Anila Kausar.jpeg" alt="Image 1" class="circular-image">
+                        <img src="Images/Dr Anila Kausar.jpeg" alt="Image 1" class="circular-image">
                     </a>
                 </div>
                 <div class="col-md-2 mb-4">
                     <a href="about author.html">
-                        <img src="Asad.jpg" alt="Image 2" class="circular-image">
+                        <img src="Images/Asad.jpg" alt="Image 2" class="circular-image">
                     </a>
                 </div>
                 <div class="col-md-2 mb-4">
                     <a href="about author.html">
-                        <img src="Ghuffran pic.jpeg" alt="Image 3" class="circular-image">
+                        <img src="Images/Ghuffran pic.jpeg" alt="Image 3" class="circular-image">
                     </a>
                 </div>
                 <div class="col-md-2 mb-4">
                     <a href="about author.html">
-                        <img src="Fizza Image.jpeg" alt="Image 4" class="circular-image">
+                        <img src="Images/Fizza Image.jpeg" alt="Image 4" class="circular-image">
                     </a>
                 </div>
                 <div class="col-md-2 mb-4">
                     <a href="about author.html">
-                        <img src="Barha.jpeg" alt="Image 5" class="circular-image">
+                        <img src="Images/Barha.jpeg" alt="Image 5" class="circular-image">
                     </a>
                 </div>
             </div>
