--- a/about author.html
+++ b/about author.html
@@ -99,11 +99,8 @@
           </ul>
           <form class="d-flex " role="search">
             <input class="form-control mx-3" type="search" placeholder="Search" aria-label="Search">
-            <!-- <button type="button" class="btn btn-outline-warning mx-3 no-underline "><a href="about.html">About
-              Us</a></button> -->
             <button class="btn btn-outline-info text-white mr-3 " type="submit">Search</button>
           </form>
-          <!-- <button type="button" class="btn btn-info mx-3">About us</button> -->
         </div>
       </div>
     </nav>
@@ -111,20 +108,8 @@
   <main>
     <!-- Page Content -->
     <div class="container my-5 py-5">
-      <!-- <h1 class="text-center about py-3">About Us</h1> -->
       <div class="row">
         <div class="col-lg-6 ">
-          <!-- <img src="group photos_geocoderx.jpeg" class="img-fluid" alt="...">
-          <h2 class="mission ">Our Mission</h2>
-          <p>Our mission at our GIS and Geography research lab is to use cutting-edge research and analysis to advance
-            our understanding of the complex spatial relationships that shape our world. We believe that GIS and
-            Geography are powerful tools that can be used to address real-world problems and make a positive impact on
-            society. To achieve our mission, we focus on interdisciplinary collaboration and practical application,
-            ensuring that our research is not only innovative but also relevant and useful. We also provide high-quality
-            education and training to the next generation of GIS and Geography professionals, equipping them with the
-            skills and knowledge they need to succeed in their careers. We are committed to engaging in meaningful
-            partnerships and collaborations with other organizations and stakeholders, working together to create
-            positive change and make a difference in the world.</p> -->
           <div class="row">
             <div class="col-lg-6" style="text-align: justify;">
               <h3>Dr. Anila Kausar</h3>
@@ -137,18 +122,18 @@
                 presenter, and workshop organizer. Her expertise in GIS and remote sensing is evident from her
                 award-winning work on urban land-use analysis and environmental impact assessment. For collaboration or
                 inquiries, contact Dr. Kausar at anilak@uok.edu.pk or +9221-99261300-6.</p>
-              <a href="Dr_AnilaKausar_CV_2023.pdf" target="_blank" class="btn btn-primary mt-3">See More &amp; CV</a>
-              <!-- <a href="Asad_CV 2-4-23.pdf" download target="_blank" class="btn btn-primary mt-3">See More & Download CV</a> -->
+              <a href="pdfs/Dr_AnilaKausar_CV_2023.pdf" target="_blank" class="btn btn-primary mt-3">See More &amp;
+                CV</a>
 
             </div>
             <div class="col-lg-6 d-flex align-items-center">
-              <img src="Dr Anila Kausar.jpeg" class="img-fluid mb-4" alt="Tutor 1">
+              <img src="Images/Dr Anila Kausar.jpeg" class="img-fluid mb-4" alt="Tutor 1">
             </div>
           </div>
           <hr>
           <div class="row">
             <div class="col-lg-6 d-flex align-items-center">
-              <img src="Ghuffran pic.jpeg" class="img-fluid mb-4" alt="Tutor 2">
+              <img src="Images/Ghuffran pic.jpeg" class="img-fluid mb-4" alt="Tutor 2">
             </div>
             <div class="col-lg-6" style="text-align: justify;">
               <h3>Ghuffran saeed</h3>
@@ -167,27 +152,15 @@
                 PROSPECT)” (Oral Presentation). Later on, a paper was published in the International Journal in the year
                 2023 entitled Land-Use/Land Cover Analysis Through Object Based Technique: A Case Study of
                 Shahrah-E-Faisal. DOI.ORG/10.12775/EQ.2023.024.”</p>
-              <a href="GhuffranSaeed_CV.pdf" target="_blank" class="btn btn-primary mt-3">See More &amp; CV</a>
+              <a href="pdfs/GhuffranSaeed_CV.pdf" target="_blank" class="btn btn-primary mt-3">See More &amp; CV</a>
             </div>
           </div>
           <hr>
-          <!-- <div class="row">
-           
-          </div> -->
         </div>
         <div class="col-lg-6">
-          <!-- <h2 class="mission ">Our Vision</h2>
-          <p>At our GIS and Geography research lab, our vision is not only to become a leading research institution, but
-            also to be recognized as a hub of innovation and creativity. We believe that by constantly pushing the
-            boundaries of knowledge and developing new and exciting ways of understanding the world, we can make a real
-            difference in society. We are committed to being at the forefront of research in GIS and Geography,
-            exploring new areas of study and collaborating with other experts in the field. We believe that our work has
-            the potential to transform the way we understand and interact with the world around us, and we are
-            passionate about using our skills and expertise to make a positive impact. By working together with other
-            organizations and stakeholders, we believe that we can create a better future for all.</p> -->
           <div class="row">
             <div class="col-lg-6 d-flex align-items-center">
-              <img src="Asad.jpg" class="img-fluid mb-4" alt="Teacher 1">
+              <img src="Images/Asad.jpg" class="img-fluid mb-4" alt="Teacher 1">
             </div>
             <div class="col-lg-6" style="text-align: justify;">
               <h3>Asad Maqsoom</h3>
@@ -200,7 +173,7 @@
                 experiences. I'm a detail-oriented individual with a passion for photography and a love for travel,
                 which fuels my creativity. My collaborative nature and communication skills have been acknowledged in
                 various conferences and workshops. You can contact me at 03070258400 or asadmaqsoom77@gmail.com</p>
-              <a href="Asad_CV 2-4-23.pdf" target="_blank" class="btn btn-primary mt-3">See More &amp; CV</a>
+              <a href="pdfs/Asad_CV 2-4-23.pdf" target="_blank" class="btn btn-primary mt-3">See More &amp; CV</a>
             </div>
           </div>
           <hr>
@@ -220,13 +193,13 @@
               <a href="Dr_AnilaKausar_CV_2023.pdf" target="_blank" class="btn btn-primary mt-3">See More &amp; CV</a>
             </div>
             <div class="col-lg-6 d-flex align-items-center">
-              <img src="Barha.jpeg" class="img-fluid mb-4" alt="Teacher 2">
+              <img src="Images/Barha.jpeg" class="img-fluid mb-4" alt="Teacher 2">
             </div>
           </div>
           <hr>
           <div class="row">
             <div class="col-lg-6 d-flex align-items-center">
-              <img src="Fizza Image.jpeg" class="img-fluid mb-4" alt="Teacher 3">
+              <img src="Images/Fizza Image.jpeg" class="img-fluid mb-4" alt="Teacher 3">
             </div>
             <div class="col-lg-6" style="text-align: justify;">
               <h3>Fizza Ejaz</h3>
@@ -240,47 +213,27 @@
                 Erdas, I thrive on analyzing and handling spatial data to derive meaningful insights.Feel free to get in
                 touch with me via email at fizzaejaz32@gmail.com or reach out by phone at 03312944206. Let's collaborate
                 and make meaningful strides in the realm of geography and GIS together</p>
-              <a href="Fizza CV.pdf" target="_blank" class="btn btn-primary mt-3">See More &amp; CV</a>
+              <a href="pdfs/Fizza CV.pdf" target="_blank" class="btn btn-primary mt-3">See More &amp; CV</a>
             </div>
 
           </div>
-          <!-- <hr>
-          <div class="row">
-            <div class="col-lg-6">
-              <h3>Asad Maqsoom</h3>
-              <p>Michael has a Master's degree in Education from Harvard University and has been teaching for over 10
-                years. He specializes in high school subjects such as history and social studies.</p>
-              <a href="#" class="btn btn-primary mt-3">See More</a>
-            </div>
-            <div class="col-lg-6">
-              <img src="Asad.jpg" class="img-fluid mb-4" alt="Teacher 2">
-            </div>
-          </div>
-          <hr> -->
-        </div>
+                </div>
       </div>
     </div>
-
-    <!-- Footer -->
-    <footer class="bg-light py-3">
-      <div class="container text-center">
-        <p>&copy; 2023</p>
-      </div>
-    </footer>
-
+    <!-- This is Back to Top Button -->
+    <div class="container text-center">
+      <a href="#" target="_blank" class="btn btn-dark float-end">Back to top</a>
+         </div>   
     <!-- Scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
-
-
-
-
 <!-- FOOTER -->
 <footer class="container">
-  <p class="float-end"><a href="#">Back to top</a></p>
-  <p>© 2017–2023 Company, Inc. · <a href="#">Privacy</a> · <a href="#">Terms</a></p>
+  <div class="container text-center">
+    <p>&copy; 2023</p>
+    <p>© 2017–2023 Company, Inc. · <a href="#">Privacy</a> · <a href="#">Terms</a></p>
+  </div> 
 </footer>
 </main>
 
