--- a/Blog.html
+++ b/Blog.html
@@ -21,7 +21,6 @@
       color: white;
     }
   </style>
-
 </head>
 
 <body>
@@ -30,7 +29,7 @@
       <div class="container-fluid">
         <a class="navbar-brand ml-3" href="index.html">GeoCoderX</a>
         <button class="navbar-toggler mx-2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
-        aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+          aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
@@ -70,12 +69,8 @@
           </ul>
           <form class="d-flex " role="search">
             <input class="form-control mx-3" type="search" placeholder="Search" aria-label="Search">
-            <!-- <button type="button" class="btn btn-outline-warning mx-3 no-underline "><a href="about.html">About
-              Us</a></button> -->
             <button class="btn btn-outline-info text-white mr-3 " type="submit">Search</button>
           </form>
-          <!-- <button type="button" class="btn btn-info mx-3">About us</button> -->
-
         </div>
       </div>
     </nav>
@@ -90,10 +85,10 @@
           infrastructure development to public health and socioeconomic dynamics. In this blog, we delve into the
           multifaceted effects of climate change on urbanization, exploring its implications and the strategies cities
           can adopt to adapt and thrive in the face of these challenges.</p>
-        <p class="lead mb-0"><a href="first_blog.html" class="text-body-emphasis fw-bold">Continue reading...</a></p>
+        <!-- <p class="lead mb-0"><a href="first_blog.html" class="text-body-emphasis fw-bold">Continue reading...</a></p> -->
+        <p class="lead mb-0"><a href="Blogs/EcoAware Insights Navigating the Environmental Landscape.html" class="text-body-emphasis fw-bold">Continue reading...</a></p>
       </div>
     </div>
-
     <div class="row mb-2">
       <div class="col-md-6">
         <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
@@ -104,14 +99,10 @@
             <p class="card-text mb-auto">Explore the dynamic realm of GIS Insights: Mapping the Digital Landscape, where
               we unravel the power of Geographic Information Systems, their myriad applications across industries, and
               the art of spatial storytelling that breathes life into data.</p>
-            <a href="3rd_blog.html" class="icon-link gap-1 icon-link-hover stretched-link">
+            <a href="Blogs/GIS Insights Mapping the Digital Landscape.html" class="icon-link gap-1 icon-link-hover stretched-link">
               Continue reading
-              <!-- <svg class="bi"><use xlink:href="images"></use></svg> -->
             </a>
           </div>
-          <!-- <div class="col-auto d-none d-lg-block">
-                <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-              </div> -->
         </div>
       </div>
       <div class="col-md-6">
@@ -123,14 +114,10 @@
             <p class="mb-auto">In this blog post, we embark on a journey to unveil the wonders of remote sensing,
               exploring its applications, technologies, and the profound insights it offers into the world around us.
             </p>
-            <a href="2nd_blog.html" class="icon-link gap-1 icon-link-hover stretched-link">
+            <a href="Blogs/RemoteSensing Unveiled Capturing Earth from A far.html" class="icon-link gap-1 icon-link-hover stretched-link">
               Continue reading
-              <!-- <svg class="bi"><use xlink:href="#chevron-right"></use></svg> -->
             </a>
           </div>
-          <!-- <div class="col-auto d-none d-lg-block">
-                <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-              </div> -->
         </div>
       </div>
     </div>
@@ -185,12 +172,10 @@
           </p>
 
           <nav class="blog-pagination" aria-label="Pagination">
-            <a class="btn btn-outline-primary rounded-pill" href="first_blog.html">Older</a>
+            <a class="btn btn-outline-primary rounded-pill" href="Blogs/EcoAware Insights Navigating the Environmental Landscape.html">Older</a>
             <a class="btn btn-outline-secondary rounded-pill disabled" aria-disabled="true">Newer</a>
           </nav>
-
       </div>
-
       <div class="col-md-4">
         <div class="position-sticky" style="top: 2rem;">
           <div class="p-4 mb-3 bg-body-tertiary rounded">
@@ -198,11 +183,9 @@
             <p class="mb-0">Customize this section to tell your visitors a little bit about your publication, writers,
               content, or something else entirely. Totally up to you.</p>
           </div>
-
           <div>
             <h4 class="fst-italic">Recent posts</h4>
             <ul class="list-unstyled">
-
               <li>
                 <a class="d-flex flex-column flex-lg-row gap-3 align-items-start align-items-lg-center py-3 link-body-emphasis text-decoration-none border-top"
                   href="2nd_blog.html">
@@ -240,14 +223,6 @@
               </li>
             </ul>
           </div>
-          <!-- <div class="p-4">
-            <h4 class="fst-italic">Elsewhere</h4>
-            <ol class="list-unstyled">
-              <li><a href="#">GitHub</a></li>
-              <li><a href="#">Twitter</a></li>
-              <li><a href="#">Facebook</a></li>
-            </ol>
-          </div> -->
         </div>
       </div>
     </div>
