--- a/Blogs/RemoteSensing Unveiled Capturing Earth from A far.html
+++ b/Blogs/RemoteSensing Unveiled Capturing Earth from A far.html
@@ -192,7 +192,7 @@
                     </div>
 
                     <div class="author-section bg-light p-4 mb-4">
-                        <img src="Asad.jpg" class="img-fluid rounded-circle mb-3" alt="Author">
+                        <img src="Images/Asad.jpg" class="img-fluid rounded-circle mb-3" alt="Author">
                         <h4>Author: Asad Maqsoom</h4>
                         <p class="text-muted">Geospatial Analyst with expertise in GIS, remote sensing, and cartography.
                             Master's
