--- a/Blogs/Why Sustainable Energy Sources Are Vital for Our Future.html
+++ b/Blogs/Why Sustainable Energy Sources Are Vital for Our Future.html
@@ -262,7 +262,7 @@
                     </div>
 
                     <div class="author-section bg-light p-4 mb-4">
-                        <img src="Fizza Image.jpeg" class="img-fluid rounded-circle mb-3" alt="Author">
+                        <img src="Images/Fizza Image.jpeg" class="img-fluid rounded-circle mb-3" alt="Author">
                         <h4>Author: Fizza Ejaz</h4>
                         <p class="text-muted">Hello, I'm Fizza Ejaz, a dedicated geographer with a passion for exploring the world through technology. I hold a Master's degree in Geography with a specialization in Remote Sensing and GIS. I am currently pursuing my MPhil, diving deeper into geographic information systems. My experience includes an internship at NDMP Pvt Ltd, contributing to Climate Vulnerability and Capacity Assessment projects. Additionally, I've taught geography at APS Army Public School COD, nurturing young minds. My academic journey involves diverse research, particularly focusing on urban and environmental themes..</p>
                     </div>
